--- a/styles.css
+++ b/styles.css
@@ -80,11 +80,13 @@ li a:hover{
 .learn-about .container{
     display: flex;
     flex-wrap: wrap; /* wrapping the contents so that the heading and the columns is not in the same line.*/
+   
 }
 
 .learn-about .container h2{
     font-size: 24px;
     color:#48bb78;
+    height: 60px;
 }
 
 .cards{
